1.3
  * some verbes fixed in mplib;
  * varg fix;
  * most verbs are splitted with main and after_ event.

1.2
  * some verb synonims;
  * parser expert on/off mode;
  * unicode input (INSTEAD >= 3.3 only).

1.1
  * Better hint message (unknown noun);
  * Fixes in mp:synonyms.

1.0
  * cleanup of code;
  * fixes in :dict logic.

0.93
  * Enter (inside) pattern added;
  * up/down shorten in ru;
  * @all (DropAll, TakeAll);
  * mp.expert_mode added (multiple commands, shortens);
  * mp.compare_len (short objects words);
  * life methods called on non-animated objects too;
  * daemon fix;
  * mp.auto_animate option.

 -- Peter Kosyh <p.kosyh@gmail.com>  Sat, 8 Dec 2018 10:43:00 +0300

0.92

  * PARTOF msg fix;
  * NO_LIVE_ACTION msg;

 -- Peter Kosyh <p.kosyh@gmail.com>  Fri, 9 Nov 2018 09:11:00 +0300

0.91

  * speed up.

 -- Peter Kosyh <p.kosyh@gmail.com>  Sat, 27 Oct 2018 16:30:00 +0300

0.9

  * first release.

 -- Peter Kosyh <p.kosyh@gmail.com>  Sat, 13 Oct 2018 12:47:00 +0300