@@ -1919,6 +1919,7 @@ obj {
 |hasnt "атрибут"                 | Проверить отсутствие атрибута
 |daemonStart                     | Добавить в список фоновых событий
 |daemonStop                      | Убрать из списка фоновых событий
+|isDaemon                        | Есть в списке фоновых событий?
 |once                            | Выполнить условие только 1 раз
 |noun(склонение)                 | Видимое имя предмета в требуемом склонении
 |Noun(склонение)                 | То же самое, но с заглавной буквы
@@ -1986,6 +1987,9 @@ obj {
 | move(что, куда)                | Аналог mp:move(что, куда, true)
 | parent(что)                    | Аналог where()
 | content(что)                   | Аналог mp:content()
+| DaemonStart(что)               | Добавить в список фоновых событий
+| DaemonStop(что)                | Удалить из списка фоновых событий
+| isDaemon(что)                  | Есть в списке фоновых событий?
 
 ## Список всех атрибутов
 
