@@ -1,7 +1,8 @@
 1.3
   * some verbes fixed in mplib;
   * varg fix;
-  * most verbs are splitted with main and after_ event.
+  * most verbs are splitted with main and after_ event;
+  * isDaemon and ob:isDaemon() functions.
 
 1.2
   * some verb synonims;
